--- a/scss/style.scss
+++ b/scss/style.scss
@@ -100,7 +100,7 @@ body {
 /* ---------------ABOUT ME-------------------- */
 .aboutMe {
     font-size: 16px;
-    min-height: 100vh;
+    min-height: calc(100vh - 60px);
     margin: 0 auto;
     color: #FFF;
 
@@ -167,14 +167,14 @@ body {
 .sectionTitle {
     margin: 0;
     text-align: center;
-    padding-top: 3em;
+    padding-top: 1em;
     color: #FFF;
 }
 
 .projects {
     font-size: 16px;
+    min-height: calc(100vh - 60px);
     color: #FFF;
-    padding: 2em 0;
 
     &__item {
         margin: 2em 0;
