refactored aboutMe section. Quit bootstrap

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -7,7 +7,7 @@ main {
     & .presentation {
         width: 90%;
         height: 100%;
-        padding: 6em 0;
+        padding-top: 6em;
         margin: 0 auto;
         color: #e7e7e7;
         display: flex;
