--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ main {
 main .presentation {
   width: 90%;
   height: 100%;
-  padding: 6em 0;
+  padding-top: 6em;
   margin: 0 auto;
   color: #e7e7e7;
   display: flex;
@@ -248,6 +248,144 @@ main .presentation__img img:hover {
     height: 380px;
   }
 }
+.aboutMe {
+  font-size: 1rem;
+  font-family: "Roboto", sans-serif;
+  width: 100vw;
+  min-height: calc(100vh - 70px);
+  color: #fff;
+}
+.aboutMe__container {
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+  padding-top: 2em;
+  display: flex;
+  justify-content: space-between;
+}
+.aboutMe__container h3 {
+  font-size: 1.8em;
+  font-weight: 500;
+  letter-spacing: 1px;
+  text-align: center;
+  margin: 0;
+}
+.aboutMe__container__information {
+  width: 700px;
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+}
+.aboutMe__container__information__item {
+  display: flex;
+  flex-direction: column;
+  gap: 0.8em;
+}
+.aboutMe__container__information__item p {
+  font-size: 1.3em;
+}
+.aboutMe__container__skills {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5em;
+  width: 300px;
+}
+.aboutMe__container__skills__box {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 1.2em;
+}
+.aboutMe__container__skills__box__item img {
+  width: 80px;
+  height: auto;
+  transition: 1.7s ease all;
+}
+.aboutMe__container__skills__box__item img:hover {
+  transform: rotate(360deg);
+  filter: drop-shadow(1px 1px 4px #dad6d6);
+  cursor: pointer;
+}
+.aboutMe__container__skills__box__item p {
+  font-size: 0.9em;
+  font-weight: 400;
+  text-align: center;
+}
+
+@media only screen and (max-width: 575px) {
+  .aboutMe {
+    font-size: 0.85rem;
+  }
+  .aboutMe__container {
+    width: 90%;
+    flex-direction: column;
+    align-items: center;
+    gap: 2em;
+  }
+  .aboutMe__container__information {
+    width: auto;
+  }
+  .aboutMe__container__information__item p {
+    text-align: justify;
+  }
+  .aboutMe__container__skills__box {
+    justify-content: space-around;
+  }
+  .aboutMe__container__skills__box__item img {
+    width: 110px;
+  }
+}
+@media only screen and (min-width: 576px) and (max-width: 768px) {
+  .aboutMe {
+    font-size: 0.9rem;
+  }
+  .aboutMe__container {
+    width: 90%;
+    flex-direction: column;
+    align-items: center;
+    gap: 2em;
+  }
+  .aboutMe__container__information {
+    width: auto;
+  }
+  .aboutMe__container__information__item p {
+    text-align: justify;
+  }
+  .aboutMe__container__skills {
+    width: 500px;
+  }
+  .aboutMe__container__skills__box {
+    justify-content: space-evenly;
+  }
+  .aboutMe__container__skills__box__item img {
+    width: 100px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+  .aboutMe__container {
+    width: 80%;
+    flex-direction: column;
+    align-items: center;
+    gap: 2em;
+  }
+  .aboutMe__container__information {
+    width: auto;
+  }
+  .aboutMe__container__information__item p {
+    text-align: justify;
+  }
+  .aboutMe__container__skills {
+    width: 600px;
+  }
+  .aboutMe__container__skills__box {
+    justify-content: space-evenly;
+  }
+  .aboutMe__container__skills__box__item img {
+    width: 120px;
+  }
+}
 * {
   margin: 0;
   padding: 0;
@@ -332,64 +470,6 @@ body {
   margin: 0;
 }
 
-/* ---------------ABOUT ME-------------------- */
-.aboutMe {
-  font-size: 16px;
-  min-height: calc(100vh - 60px);
-  margin: 0 auto;
-  color: #FFF;
-}
-.aboutMe__title {
-  font-size: 1.8em;
-  font-family: "Ubuntu", sans-serif;
-  text-align: center;
-  margin-top: 1em;
-}
-.aboutMe__text {
-  font-family: "Nanum Gothic", sans-serif;
-  text-align: center;
-  font-style: oblique;
-  font-size: 1.3em;
-  text-align: justify;
-}
-.aboutMe__information {
-  margin: auto 0;
-}
-.aboutMe__skills {
-  margin: auto 0;
-}
-.aboutMe__skills__container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
-  overflow: hidden;
-  padding: 1em;
-  gap: 1.5em;
-}
-.aboutMe__skills__container__logo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.aboutMe__skills__container__logo img {
-  width: 100%;
-  height: auto;
-  transition: 1.7s ease all;
-}
-.aboutMe__skills__container__logo img:hover {
-  transform: rotate(360deg);
-  filter: drop-shadow(1px 1px 4px #dad6d6);
-  cursor: pointer;
-}
-.aboutMe__skills__container__logo__description {
-  color: #ffa724;
-  font-family: "Ubuntu", sans-serif;
-  font-style: oblique;
-  font-size: 0.9em;
-  text-align: center;
-  font-weight: 400;
-}
-
-/* ---------------END ABOUT ME-------------------- */
 .sectionTitle {
   margin: 0;
   text-align: center;
