--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@
   padding: 0;
   display: flex;
   list-style: none;
+  background-color: transparent;
 }
 .header__nav__categorys li {
   margin: 0;
@@ -53,6 +54,9 @@
   border: 2px solid #fff;
 }
 .header.down {
+  background-color: #e08f15;
+}
+.header.responsive {
   background-color: #e08f15;
 }
 
